[package]
name = "num2words"
version = "1.2.0"
authors = ["Asperatus <rust@ballasi.com>"]
edition = "2018"
description = "Convert numbers like 42 to forty-two"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/num2words"
repository = "https://github.com/Ballasi/num2words/"
keywords = ["numbers", "words", "number-converter", "number", "number-spelling"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "num2words"
path = "src/lib.rs"

[[bin]]
name = "num2words"
path = "src/bin/bin.rs"

[dependencies]
num-bigfloat = { version = "^1.7.1", default-features = false }
